[package]
name = "tinyio"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["levinion <levinnion@gmail.com>"]
description = "A tiny Rust concurrency runtime library."
repository = "https://github.com/levinion/tinyio"
documentation = "https://docs.rs/tinyio"
categories = ["asynchronous"]
keywords = ["runtime", "io", "async", "non-blocking", "futures"]

[dependencies]
tinyio-core = { path = "./tinyio-core", version = "0.1.0" }
tinyio-macro = { path = "./tinyio-macro", version = "0.1.0" }

[dev-dependencies]
isahc = "1.7.2"

[workspace]
members = ["tinyio-core", "tinyio-macro"]
resolver = "2"
