[package]
name = "tinyio-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["levinion <levinnion@gmail.com>"]
description = "Core of tinyio."
repository = "https://github.com/levinion/tinyio"
documentation = "https://docs.rs/tinyio"
categories = ["asynchronous"]
keywords = ["runtime", "io", "async", "non-blocking", "futures"]


[dependencies]
crossbeam = "0.8.4"
num_cpus = "1.16.0"
rand = "0.8.5"
