[package]
name = "tinyio-macro"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["levinion <levinnion@gmail.com>"]
description = "Procedural macros of tinyio."
repository = "https://github.com/levinion/tinyio"
documentation = "https://docs.rs/tinyio"
categories = ["asynchronous"]
keywords = ["runtime", "io", "async", "non-blocking", "futures"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
syn = { version = "2.0.60", features = ["full"] }
quote = "1.0"
